--- a/_src/assets/scss/components/_header.scss
+++ b/_src/assets/scss/components/_header.scss
@@ -11,9 +11,7 @@
  margin: 0 35px;
  @media all and (min-width:768px){
   margin: 0 175px;
-
  }
-
 }
 
 .landing__header-title{
@@ -25,13 +23,7 @@
  padding-top: 64px;
  @media all and (min-width:768px){
   width: 470px;
-  margin-bottom: 100px;
   padding-top: 120px;
-  // padding-right: 30px;
-  // padding-left: 30px;
-
-
-
  }
 }
 
